--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 body {
-  min-height: 100vh;
+  min-height: 90vh;
   display: flex;
   flex-direction: column;
   scroll-behavior: smooth;
 }
 
 main {
-  flex-grow: 1;
+  flex-grow: .9;
 }
